# food_delivery_microservice

./: .gitignore
accounts/: alembic.ini  pyproject.toml  run.py
accounts/alembic/: env.py
accounts/alembic/versions/: 1b7d2a710274_set_unique_param_for_jti.py  d38daabd41ec_add_user_model.py  f4a295c427a2_add_auth_token_model.py
accounts/src/: depends.py  main.py
accounts/src/api/v1/: auth.py  user.py
accounts/src/common/enum/: error_code.py  user_role.py
accounts/src/common/exceptions/: __init__.py  exception_handler.py  exceptions.py
accounts/src/common/http_response/: base_response.py  error_response.py  response_handler.py  success_response.py
accounts/src/common/security/: password_hash.py
accounts/src/config/: base_config.py  database.py  rabbitmq_config.py
accounts/src/model/: __init__.py  token.py  user.py
accounts/src/repository/: auth_token.py  user.py
accounts/src/repository_interface/: auth_token_repository_interface.py  user_repository_interface.py
accounts/src/schema/: notification_schema.py  token.py  user.py
accounts/src/service/: auth.py  auth_token.py  notification.py  user.py
notification/: alembic.ini  pyproject.toml  requirements.txt
notification/alembic/versions/: 4c844a7704fe_add_notification_models.py  b9deebfedf9c_add_notification_config_model.py
notification/src/config/: base_config.py  database.py  rabbitmq_config.py
notification/src/model/: __init__.py  base_model.py  notification.py  notification_config.py  notification_report.py
notification/src/schema/: email.py  notification_config.py  smtp.py
(+3 files in other folders)
